# uhura

./: .gitignore  .gitmodules  LICENSE  README.md  requirements.txt
blesh/espressif/esp_uhura_blesh/: .cproject
node/: index.js  package-lock.json
old/node/: package.json
old/python/: polling.py  send_receive_to_target.py
old/python/broadcast/: bee_1.py  bee_2.py  bee_3.py  bee_4.py  bee_5.py  bee_6.py
python/broadcast/: bee_1.py  bee_2.py
src/: .dockerignore  .env.discovery  adapter.Dockerfile  build.sh  build.yml  build_uhura_full.sh  compose-local.yml  core.Dockerfile  discovery-compose.yml  discovery-test.sh  discovery-test.yml  discovery.Dockerfile  docker-compose.yml  docker-entrypoint.sh  ecosystem.config.js  fastdds.Dockerfile  gateway.Dockerfile  nats-server.conf  nats.conf.tpl  package-lock.json  push.sh  run_attach_uhura_full.sh  run_uhura_full.sh  run_zenoh.sh  run_zenoh_receiver.sh  run_zenoh_sender.sh  start-nats.sh  supervisord.conf  supervisord_setup.sh  test.Dockerfile  uhura.Dockerfile  zenoh_config.json5
src/balena/: .env  docker-compose.yml  local-docker-compose.yml
src/common/protos/: Adapter.proto  Device.proto  Message.proto  Node.proto  SendMessage.proto
src/common/structure/: dds_strctures.py
src/dbus/: docker-compose.yml
src/lib/common/: index.js  linkTable.js  package-lock.json  package.json  toolManager.js
src/lib/core/: index.js  package-lock.json  package.json  router.js  uhuraCore.js  uhura_message.js
src/main/: conf.json5  z_receiver.py  z_sender.py
src/nats/: docker-compose.yml
src/nats/adapters/cycloneDDS/: build.py  pyproject.toml
src/nats/adapters/cycloneDDS/src/: adapter_manager.py  main.py
src/nats/adapters/cycloneDDS/src/idl/: adapter.idl  dds_strctures.py
src/nats/adapters/cycloneDDS/src/proto/: Adapter_pb2.py  Message_pb2.py  Node_pb2.py  SendMessage_pb2.py
src/nats/adapters/zenoh/: Cargo.toml  README.md  build.rs  start.sh
src/nats/adapters/zenoh/src/: main.rs
src/nats/adapters/zenoh/src/proto/: mod.rs
src/nats/client/: Dockerfile.template  (+6 more)
src/ros/adapters/xbee/: CMakeLists.txt  README.md  package.xml
src/ros/adapters/xbee/install/: 60-uhura.rules  README.md  install.sh
src/ros/adapters/xbee/launch/: 0-standalone.launch  1-standalone.launch  2-standalone.launch  3-standalone.launch  4-standalone.launch  5-standalone.launch  6-standalone.launch  start.launch
src/ros/adapters/xbee/log/: xbee_test_1.csv
src/ros/adapters/xbee/msg/: Coordinates.msg
src/ros/adapters/xbee/scripts/: listener.py  message.py  test.py  tool_manager.py  uhura.py
src/ros/adapters/xbee/srv/: SetupNetworkDevice.srv  TestBroadcastNetwork.srv
(+52 files in other folders)
