[package]
name = "zenoh"
version = "0.1.0"
edition = "2021"
build= "build.rs"

[dependencies]
async-nats = "0.35.1"
tokio = { version = "1.37.0", features = ["full"] }
bytes = "1.6.0"
futures = "0.3.30"
prost = "0.12"
prost-types = "0.12"
once_cell = "1.19.0"
log = "0.4.21"
dotenv = "0.15.0"
env_logger = "0.11.3"
zenoh = "0.11.0-rc.3"

[build-dependencies]
prost-build = "0.12"
